# loris

./: .copier-answers.yaml  CONTRIBUTING.md  Dockerfile  README.md  Taskfile.dist.yaml  docker-compose.yaml  flake.nix  pyproject.toml
.github/workflows/: image.yaml  registry.yaml  test.yaml
docs/: docusaurus.config.mts
docs/docs/: 01-Index.md  02-Usage.md  03-Configuration.md
plugins/python/: customwhipserversrc.py
src/emipass/: state.py
src/emipass/api/: app.py
src/emipass/config/: models.py
src/loris/: __main__.py  server.py  state.py
src/loris/api/: app.py  lifespans.py  openapi.py  validator.py
src/loris/api/routes/: router.py
src/loris/api/routes/ping/: controller.py  models.py  router.py  service.py
src/loris/api/routes/sse/: controller.py  models.py  router.py  service.py
src/loris/api/routes/stream/: controller.py  errors.py  models.py  router.py  service.py
src/loris/api/routes/test/: controller.py  models.py  router.py  service.py
src/loris/config/: base.py  builder.py  models.py
src/loris/models/events/: bar.py  event.py  fields.py  foo.py  test.py  types.py
src/loris/services/events/: models.py  service.py
src/loris/services/ping/: models.py  service.py
src/loris/services/streaming/: errors.py  models.py  runner.py  service.py
src/loris/services/test/: models.py  service.py
tests/integration/: conftest.py  test_stream.py
