[tool.poetry]
package-mode = true
name = "loris"
version = "0.11.0"
description = "Broadcast streaming passthrough 🎤"
authors = ["radio-aktywne <it@radioaktywne.pl>"]

[tool.poetry.dependencies]
python = "^3.12"
# Pydantic is used to define data models
pydantic = "^2.10"
pydantic-settings = "^2.8"
# Typer and Rich are used to build CLIs
typer = "^0.15"
rich = "^13.9"
# Litestar and Uvicorn are used to build async APIs
litestar = "^2.14"
uvicorn = { version = "^0.34", extras = ["standard"] }
# For correct handling of timezones
tzdata = "*"
# Environment variables loader
python-dotenv = "^1.0"
# Streaming utilities
pystreams = { git = "https://github.com/radio-aktywne/pystreams.git", tag = "0.12.0" }
# Locking utilities
pylocks = { git = "https://github.com/radio-aktywne/pylocks.git", tag = "0.6.0" }
# Storage utilities
pystores = { git = "https://github.com/radio-aktywne/pystores.git", tag = "0.7.0" }

[tool.poetry.group.test.dependencies]
pytest = "^8.3"
# Asyncio support for pytest
pytest-asyncio = "^0.25"

[tool.poetry.scripts]
# Register CLI
loris = "loris.__main__:cli"

[tool.pytest.ini_options]
# Remove in the future: https://github.com/pytest-dev/pytest-asyncio/issues/924
asyncio_default_fixture_loop_scope = "function"

# See: https://python-poetry.org/docs/pyproject/#poetry-and-pep-517
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
